--- a/sub-packages/package1/package.json
+++ b/sub-packages/package1/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "package-testing",
+  "name": "sub-package-testing1",
   "version": "1.0.1",
   "description": "Testing out GitHub packages",
   "main": "index.js",
-  "private": true,
   "scripts": {
     "test": "exit 0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/noahmulfinger/package-testing.git"
-  },
+  "repository": "https://github.com/noahmulfinger/package-testing",
   "author": "Noah Mulfinger",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/noahmulfinger/package-testing/issues"
   },
   "homepage": "https://github.com/noahmulfinger/package-testing#readme",
-  "workspaces": [
-    "sub-packages/*"
-  ]
+  "dependencies": {
+    "@esri/arcgis-rest-request": "^3.0.3"
+  }
 }
