--- a/sub-packages/package1/package.json
+++ b/sub-packages/package1/package.json
@@ -2,6 +2,7 @@
   "name": "@noahmulfinger/sub-package-testing1",
   "version": "1.0.1",
   "description": "Testing out GitHub packages",
+  "private": true,
   "main": "index.js",
   "scripts": {
     "test": "exit 0"
